# sentiment-analysis-platform

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
notebooks/: embeddings.ipynb  preprocessing.ipynb
notebooks/preprocessing/: cleaning.ipynb  normalization.ipynb  pos_tagging.ipynb  tokenization.ipynb
scripts/: setup_nltk.py
src/embeddings/: fastText.py  vectorizers.py  word2vec.py
src/preprocessing/: cleaning.py  language_detection.py  linguistic.py  negation.py  normalization.py  pipeline.py  spelling.py  tokenization.py
tests/embeddings/: test_fastText.py  test_vectorizers.py  test_word2vec.py
tests/preprocessing/: test_cleaning.py  test_language.py  test_linguistic.py  test_negation.py  test_normalization.py  test_spelling.py  test_tokenization.py
