[project]
name = "sentiment-analysis-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "emoji>=2.15.0",
    "gensim>=4.4.0",
    "langdetect>=1.0.9",
    "nltk>=3.10.0",
    "numpy>=2.4.6",
    "pyspellchecker>=0.9.0",
    "scikit-learn>=1.9.0",
    "spacy>=3.8.14",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pre-commit>=4.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = []

[tool.ruff.lint]
select = ["E", "F", "I"]
